Some code for test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ cmake_minimum_required(VERSION 3.10)
 
 include(cmake/FindShapelib.cmake)
 
+find_package(Coin REQUIRED)
+
 add_subdirectory(src)
 
 add_subdirectory(tests)
