--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,7 @@
-add_library(shopin shp_reader.cpp)
+add_library(shopin
+        SHPReader.h
+        SHPReader.cpp
+        shp_reader.cpp
+        )
 
 target_include_directories(shopin PRIVATE ${SHAPELIB_INCLUDE_DIRS})
